--- a/Api_Project/EngineCore/EngineCore.vcxproj
+++ b/Api_Project/EngineCore/EngineCore.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{9072a0ed-5df8-43d9-bf12-36286ed75d64}</ProjectGuid>
+    <ProjectGuid>{35fa176c-16bb-4c2a-a672-f4ff30c1bea5}</ProjectGuid>
     <RootNamespace>EngineCore</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -101,7 +101,7 @@
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <TreatWarningAsError>false</TreatWarningAsError>
+      <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -118,7 +118,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <TreatWarningAsError>false</TreatWarningAsError>
+      <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -135,7 +135,7 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <TreatWarningAsError>false</TreatWarningAsError>
+      <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -152,7 +152,7 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <TreatWarningAsError>false</TreatWarningAsError>
+      <TreatWarningAsError>true</TreatWarningAsError>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
     </ClCompile>
     <Link>
@@ -164,10 +164,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ProjectReference Include="..\EngineBase\EngineBase.vcxproj">
-      <Project>{639157cb-4415-4ad1-b9e4-f9fad2b6fe09}</Project>
+      <Project>{ea197215-13bb-4729-9573-db483a0ee1a3}</Project>
     </ProjectReference>
     <ProjectReference Include="..\EnginePlatform\EnginePlatform.vcxproj">
-      <Project>{a182d20b-c605-4e40-b6ff-58eb5f10b7da}</Project>
+      <Project>{f0716ec2-0bc5-43ea-9046-b203e0985a67}</Project>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -187,7 +187,10 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="EngineDebug.h" />
+    <ClInclude Include="EngineDebug.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
     <ClInclude Include="EngineResourcesManager.h">
       <SubType>
       </SubType>
@@ -204,10 +207,7 @@
       <SubType>
       </SubType>
     </ClInclude>
-    <ClInclude Include="TickObject.h">
-      <SubType>
-      </SubType>
-    </ClInclude>
+    <ClInclude Include="TickObject.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Actor.cpp">
@@ -226,7 +226,10 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="EngineDebug.cpp" />
+    <ClCompile Include="EngineDebug.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="EngineResourcesManager.cpp">
       <SubType>
       </SubType>
@@ -243,10 +246,10 @@
       <SubType>
       </SubType>
     </ClCompile>
-    <ClCompile Include="TickObject.cpp">
-      <SubType>
-      </SubType>
-    </ClCompile>
+    <ClCompile Include="TickObject.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
