--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -36,6 +36,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Hammer.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Ice.cpp">
       <SubType>
       </SubType>
@@ -136,6 +140,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Game_Core.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Hammer.h">
       <SubType>
       </SubType>
     </ClInclude>
