--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -32,6 +32,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Bullet.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game_Core.cpp">
       <SubType>
       </SubType>
@@ -136,6 +140,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="BossHpBar.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Bullet.h">
       <SubType>
       </SubType>
     </ClInclude>
