--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -36,6 +36,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EndingLevel.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Game_Core.cpp">
       <SubType>
       </SubType>
@@ -144,6 +148,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Bullet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="EndingLevel.h">
       <SubType>
       </SubType>
     </ClInclude>
