--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj.filters
@@ -11,7 +11,7 @@
       <Filter>ContentsLevel</Filter>
     </ClCompile>
     <ClCompile Include="TitleActor.cpp">
-      <Filter>Title_Actor</Filter>
+      <Filter>Title_End_Actor</Filter>
     </ClCompile>
     <ClCompile Include="Stage1_MAP.cpp">
       <Filter>Stage_Actor\Stage_Map</Filter>
@@ -86,6 +86,9 @@
     <ClCompile Include="EndingLevel.cpp">
       <Filter>ContentsLevel</Filter>
     </ClCompile>
+    <ClCompile Include="EndActor.cpp">
+      <Filter>Title_End_Actor</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TitleLevel.h">
@@ -98,7 +101,7 @@
       <Filter>ContentsLevel</Filter>
     </ClInclude>
     <ClInclude Include="TitleActor.h">
-      <Filter>Title_Actor</Filter>
+      <Filter>Title_End_Actor</Filter>
     </ClInclude>
     <ClInclude Include="Stage1_MAP.h">
       <Filter>Stage_Actor\Stage_Map</Filter>
@@ -174,6 +177,9 @@
     <ClInclude Include="EndingLevel.h">
       <Filter>ContentsLevel</Filter>
     </ClInclude>
+    <ClInclude Include="EndActor.h">
+      <Filter>Title_End_Actor</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="ContentsLevel">
@@ -181,9 +187,6 @@
     </Filter>
     <Filter Include="GameCore">
       <UniqueIdentifier>{a4888ff9-9db4-4026-b17b-d375642d4577}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Title_Actor">
-      <UniqueIdentifier>{4d0d2178-9d50-469f-bf41-2e74227f0c58}</UniqueIdentifier>
     </Filter>
     <Filter Include="Stage_Actor">
       <UniqueIdentifier>{1c18503f-14a5-483b-b894-fd43af5a3acb}</UniqueIdentifier>
@@ -202,6 +205,9 @@
     </Filter>
     <Filter Include="Stage_Actor\Object">
       <UniqueIdentifier>{69359cfd-45e1-4424-952f-8ebc2c01997b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Title_End_Actor">
+      <UniqueIdentifier>{4d0d2178-9d50-469f-bf41-2e74227f0c58}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
 </Project>
