--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -36,6 +36,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EndActor.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="EndingLevel.cpp">
       <SubType>
       </SubType>
@@ -148,6 +152,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Bullet.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="EndActor.h">
       <SubType>
       </SubType>
     </ClInclude>
