--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -56,6 +56,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="IceBox.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Kirby_HpBar.cpp">
       <SubType>
       </SubType>
@@ -172,6 +176,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="Ice.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="IceBox.h">
       <SubType>
       </SubType>
     </ClInclude>
