--- a/Api_Project/Kirby_Game/Kirby_Game.vcxproj
+++ b/Api_Project/Kirby_Game/Kirby_Game.vcxproj
@@ -32,6 +32,10 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="Box.cpp">
+      <SubType>
+      </SubType>
+    </ClCompile>
     <ClCompile Include="Bullet.cpp">
       <SubType>
       </SubType>
@@ -152,6 +156,10 @@
       </SubType>
     </ClInclude>
     <ClInclude Include="BossHpBar.h">
+      <SubType>
+      </SubType>
+    </ClInclude>
+    <ClInclude Include="Box.h">
       <SubType>
       </SubType>
     </ClInclude>
